--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -79,20 +79,22 @@ table.RowTable { border-spacing: 0px; }
 /* Teams Control */
   #Teams>tbody>tr>td { text-align: center; }
   #Teams>tbody>tr.Selection>td { background: #ccc; border-radius: 12px 12px 0px 0px; }
-  #Teams>tbody>tr.Selection>td.HideTeam { border-radius: 12px; }
-  #Teams>tbody>tr:not(.Selection)>td.HideTeam { display: none; }
+  #Teams>tbody>tr.Selection.NoneSelected>td { border-radius: 12px; }
   #Teams>tbody>tr.Team>td { background: #eee; border-radius: 0px 0px 12px 12px; }
 
+  #Teams table.Team { width: 100%; border-spacing: 0px; }
+  #Teams table.Team.Hide { display: none; }
+
   #Teams table.Skaters { width: 100%; border-spacing: 0px; }
-  #Teams table.Skaters tr:first-of-type>th { border-radius: 12px 12px 0px 0px; }
-  #Teams table.Skaters th { background: #ccc; }
+  #Teams table.Skaters.Empty tr:last-of-type>th:first-of-type { border-radius: 0px 0px 0px 12px; }
+  #Teams table.Skaters.Empty tr:last-of-type>th:last-of-type { border-radius: 0px 0px 12px 0px; }
   #Teams table.Skaters tr:last-of-type>td:first-of-type { border-radius: 0px 0px 0px 12px; }
   #Teams table.Skaters tr:last-of-type>td:last-of-type { border-radius: 0px 0px 12px 0px; }
-  #Teams table.Skaters td { background: #eee; }
   #Teams table.Skaters col.Name { width: 50%; }
   #Teams table.Skaters col.Number { width: 30%; }
   #Teams table.Skaters col.Button { width: 20%; }
-  #Teams table.Skaters button.Short>span { padding-top: 0em; padding-bottom: 0em; }
+  #Teams table.Skaters button.AddSkater>span { padding-top: 0em; padding-bottom: 0em; }
+  #Teams table.Skaters button.RemoveSkater>span { padding-top: 0em; padding-bottom: 0em; }
 /* End Teams Control */
 
 /* Save/Load Control */
