--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -90,9 +90,13 @@ table.RowTable { border-spacing: 0px; }
   #Teams table.Skaters.Empty tr:last-of-type>th:last-of-type { border-radius: 0px 0px 12px 0px; }
   #Teams table.Skaters tr:last-of-type>td:first-of-type { border-radius: 0px 0px 0px 12px; }
   #Teams table.Skaters tr:last-of-type>td:last-of-type { border-radius: 0px 0px 12px 0px; }
-  #Teams table.Skaters col.Name { width: 50%; }
+  #Teams table.Skaters col.Id { width: 15%; }
+  #Teams table.Skaters col.Name { width: 40%; }
   #Teams table.Skaters col.Number { width: 30%; }
-  #Teams table.Skaters col.Button { width: 20%; }
+  #Teams table.Skaters col.Button { width: 15%; }
+
+  #Teams table.Skaters th.Title { font-size: 200%; }
+  #Teams table.Skaters td.Id { font-size: 75%; }
   #Teams table.Skaters button.AddSkater>span { padding-top: 0em; padding-bottom: 0em; }
   #Teams table.Skaters button.RemoveSkater>span { padding-top: 0em; padding-bottom: 0em; }
 /* End Teams Control */
@@ -128,9 +132,13 @@ table.RowTable { border-spacing: 0px; }
 
 /* Teams Remove Dialog */
   div.TeamsRemoveDialog { text-align: center; }
-  div.TeamsRemoveDialog .AreYouSure { font-weight: bold; }
-  div.TeamsRemoveDialog button.Yes { float: left; }
-  div.TeamsRemoveDialog button.No { float: right; }
+  div.TeamsRemoveDialog a.Title { font-size: 125%; }
+  div.TeamsRemoveDialog a.Remove { font-size: 150%; }
+  div.TeamsRemoveDialog a.Target { font-weight: bold; font-size: 250%; }
+  div.TeamsRemoveDialog a.Name { }
+  div.TeamsRemoveDialog a.AreYouSure { font-weight: bold; font-size: 300%; }
+  div.TeamsRemoveDialog button.No { float: left; }
+  div.TeamsRemoveDialog button.Yes { float: right; }
 /* End Teams Remove Dialog */
 
 /* Intermission Control Dialog */
