remove z-indexes from layers in scoreboard the z-index settings were no longer needed (layer opacity is now used), and they were causing the "accelerated compositing" bug (not sure why)

--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -71,7 +71,7 @@ function setupMainDiv(div) {
   div.css({ position: "fixed" });
   $.each( [ "bottom", "top", "left", "right" ], function() {
     $("<div>")
-      .css( { width: "100%", height: "100%", "z-index": "1000", background: "grey", position: "absolute" } )
+      .css( { width: "100%", height: "100%", background: "grey", position: "absolute" } )
       .css(String(this), "100%")
       .appendTo(div);
   });
