--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -76,14 +76,21 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
 
   /* Team Jammer sub-box */
   #sbDiv>div.Team>div.Jammer { bottom: 0%; width: 90%; height: 18%; }
+  #sbDiv>div.Team>div.Jammer>div { width: 100%; height: 100%; }
   #sbDiv>div.Team1>div.Jammer,#sbDiv>div.Team2.SwapTeams>div.Jammer { left: auto; right: 100%; }
   #sbDiv>div.Team2>div.Jammer,#sbDiv>div.Team1.SwapTeams>div.Jammer { left: 100%; right: auto; }
-  #sbDiv>div.Team1>div.Jammer.ShowJammer.ShowJam,#sbDiv>div.Team2.SwapTeams>div.Jammer.ShowJammer.ShowJam
+  #sbDiv>div.Team1>div.Jammer.ShowJam,#sbDiv>div.Team2.SwapTeams>div.Jammer.ShowJam
     { left: auto; right: 5%; }
-  #sbDiv>div.Team2>div.Jammer.ShowJammer.ShowJam,#sbDiv>div.Team1.SwapTeams>div.Jammer.ShowJammer.ShowJam
+  #sbDiv>div.Team2>div.Jammer.ShowJam,#sbDiv>div.Team1.SwapTeams>div.Jammer.ShowJam
     { left: 5%; right: auto; }
-  #sbDiv>div.Team>div.Jammer>a.Pulse { color: #ff0000; }
-  #sbDiv>div.Team>div.Jammer>a.Jammer { color: #ffffff; }
+  #sbDiv>div.Team1>div.Jammer>div,#sbDiv>div.Team2.SwapTeams>div.Jammer>div { left: auto; right: 100%; }
+  #sbDiv>div.Team2>div.Jammer>div,#sbDiv>div.Team1.SwapTeams>div.Jammer>div { left: 100%; right: auto; }
+  #sbDiv>div.Team1>div.Jammer>div.ShowJammer,#sbDiv>div.Team2.SwapTeams>div.Jammer>div.ShowJammer
+    { left: auto; right: 0%; }
+  #sbDiv>div.Team2>div.Jammer>div.ShowJammer,#sbDiv>div.Team1.SwapTeams>div.Jammer>div.ShowJammer
+    { left: 0%; right: auto; }
+  #sbDiv>div.Team>div.Jammer>div>a.Pulse { color: #ff0000; }
+  #sbDiv>div.Team>div.Jammer>div>a.Jammer { color: #ffffff; }
 /* End Teams */
 
 /* Timeouts */
