Enable videos in scoreboard to play when video view is selected.  Videos are not restarted, they play in a loop and are only paused when their view is hidden.

--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -17,7 +17,7 @@
 
   <div id="sbDiv" class="View"></div>
   <div id="imageDiv" class="View"><img></img></div>
-  <div id="videoDiv" class="View"><video></video></div>
+  <div id="videoDiv" class="View"><video loop></video></div>
   <div id="htmlDiv" class="View"><iframe></iframe></div>
 
 </div>
