--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -78,6 +78,24 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
     { left: 0%; right: auto; }
   #sbDiv>div.Team>div.Jammer>div>a.Pulse { color: #ff0000; }
   #sbDiv>div.Team>div.Jammer>div>a.Jammer { color: #ffffff; }
+
+  /* Team Lead Jammer sub-box */
+  #sbDiv>div.Team>div.Lead { bottom: 0%; width: 90%; height: 18%; }
+  #sbDiv>div.Team>div.Lead>div { width: 100%; height: 100%; }
+  #sbDiv>div.Team>div.Lead>div.TextContainer { font-size: 10%; }
+  #sbDiv>div.Team1>div.Lead,#sbDiv>div.Team2.SwapTeams>div.Lead { left: auto; right: 100%; }
+  #sbDiv>div.Team2>div.Lead,#sbDiv>div.Team1.SwapTeams>div.Lead { left: 100%; right: auto; }
+  #sbDiv>div.Team1>div.Lead.ShowJam,#sbDiv>div.Team2.SwapTeams>div.Lead.ShowJam
+    { left: auto; right: 5%; }
+  #sbDiv>div.Team2>div.Lead.ShowJam,#sbDiv>div.Team1.SwapTeams>div.Lead.ShowJam
+    { left: 5%; right: auto; }
+  #sbDiv>div.Team1>div.Lead>div,#sbDiv>div.Team2.SwapTeams>div.Lead>div { left: auto; right: 100%; }
+  #sbDiv>div.Team2>div.Lead>div,#sbDiv>div.Team1.SwapTeams>div.Lead>div { left: 100%; right: auto; }
+  #sbDiv>div.Team1>div.Lead>div.ShowLead,#sbDiv>div.Team2.SwapTeams>div.Lead>div.ShowLead
+    { left: auto; right: 0%; }
+  #sbDiv>div.Team2>div.Lead>div.ShowLead,#sbDiv>div.Team1.SwapTeams>div.Lead>div.ShowLead
+    { left: 0%; right: auto; }
+  #sbDiv>div.Team>div.Lead>div>a.Lead { color: #ffffff; }
 /* End Teams */
 
 /* Timeouts */
