--- a/html/views/overlay.html
+++ b/html/views/overlay.html
@@ -16,36 +16,32 @@
 
   <div id="TopBar">
     <div id="ClockPeriodNumber" >
-      <a data-sbelement="ScoreBoard.Clock(Period).Number" ></a>
+      <a><span class="Name">P</span><span class="Number"></span></a>
     </div>
     <div id="ClockPeriodTime" >
-      <a class="ClockPI ClockMinSec" data-sbelement="ScoreBoard.Clock(Period).Time" ></a>
+      <a class="ClockPI" ></a>
     </div>
 
     <div id="ClockIntermissionTime" >
-      <a class="ClockPI ClockMinSec" data-sbelement="ScoreBoard.Clock(Intermission).Time" ></a>
+      <a class="ClockPI" ></a>
     </div>
 
     <div id="ClockJamTime" >
-      <a class="ClockJLT ClockMinSec" data-sbelement="ScoreBoard.Clock(Jam).Time" ></a>
+      <a class="ClockJLT"></a>
     </div>
     <div id="ClockLineupTime" >
-      <a class="ClockJLT ClockMinSec" data-sbelement="ScoreBoard.Clock(Lineup).Time" ></a>
+      <a class="ClockJLT"></a>
     </div>
     <div id="ClockTimeoutTime" >
-      <a class="ClockJLT ClockMinSec" data-sbelement="ScoreBoard.Clock(Timeout).Time" ></a>
+      <a class="ClockJLT"></a>
     </div>
   </div>
 
   <div id="BottomBar">
     <div id="Team1Name" ><a></a></div>
-    <div id="Team1Score" >
-      <a data-sbelement="ScoreBoard.Team(1).Score" ></a>
-    </div>
+    <div id="Team1Score" ><a></a></div>
     <div id="Team2Name" ><a></a></div>
-    <div id="Team2Score" >
-      <a data-sbelement="ScoreBoard.Team(2).Score" ></a>
-    </div>
+    <div id="Team2Score" ><a></a></div>
   </div>
 
   <img id="Overlay" src="/images/fullscreen/overlay.png" />
