in operator control panel save/load tab, update scoreboard reset button to "reset everything" and add "reset scoreboard only" button to only reset ScoreBoard subelement via ScoreBoard.Reset call

--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -148,9 +148,7 @@ table.RowTable { border-spacing: 0px; }
   table.IntermissionControlDialog>tbody>tr.Control>td.HideClock { border-bottom-right-radius: 12px; }
 /* End Intermission Control Dialog */
 
-/* Reset ScoreBoard Dialog */
-  div.ResetScoreBoardDialog p { text-align: center; }
-  div.ResetScoreBoardDialog button.Yes { float: left; }
-  div.ResetScoreBoardDialog button.No { float: right; }
+/* Reset Dialog */
+  div.ResetDialog p { text-align: center; }
 /* End Reset ScoreBoard Dialog */
 
