Update stream from file interface controls

--- a/html/controls/stream.css
+++ b/html/controls/stream.css
@@ -24,5 +24,7 @@
   #Load p.Indicator { text-align: center; }
   #Load p.Indicator>a { font-size: 200%; font-weight: bold; }
   #Load p.Indicator>a.Running { color: #0f0; }
-  #Load div.Speed { width: 25%; }
+  #Load div.Speed { width: 25%; background: #ccc; }
+  #Load div.Speed .ui-slider-handle { border-color: #f00; }
+  #Load div.Progress { background: #ccc; }
 /* End Load Tab */
