Add dialog popup to display help on how to create conditional tweet rules

--- a/html/controls/twitter.css
+++ b/html/controls/twitter.css
@@ -27,3 +27,9 @@
   #ConditionalTweets>tbody>tr:nth-child(odd)>td { background: #eee; }
   #ConditionalTweets>tbody>tr:nth-child(even)>td { background: #ccc; }
 /* End ConditionalTweets table */
+
+/* ShowFormatSpecifiersDialog */
+  div.ShowFormatSpecifiersDialog { font-size: 75%; }
+  div.ShowFormatSpecifiersDialog table { width: 100%; }
+  div.ShowFormatSpecifiersDialog table td { width: 50%; }
+/* End ShowFormatSpecifiersDialog */
