Update lineups page with table border rounding and line background color changes

--- a/html/controls/lineups.css
+++ b/html/controls/lineups.css
@@ -8,13 +8,22 @@
  * See the file COPYING for details.
  */
 
-table { border: 3px solid; width: 100%; }
-
-th { background-color: #eeeeee; }
+table { border: 3px solid; border-radius: 5px; border-spacing: 0px; width: 100%; }
 
 td { text-align: center; }
 
-div#tableDiv table td.Position,div#tableDiv table td.Box { border: 1px solid; border-radius: 5px; }
+div#tableDiv table thead tr.Team th { background: #aaa; }
+div#tableDiv table thead tr.Header th { background: #bbb; }
+
+div#tableDiv table tbody tr:nth-child(odd) td { background: #fff; }
+div#tableDiv table tbody tr:nth-child(even) td { background: #ccc; }
+
+div#tableDiv table td.Position,div#tableDiv table td.Box {
+  border: 1px solid;
+  border-radius: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
 
 div#tableDiv table th.Name { width: 15%; }
 div#tableDiv table th.Number { width: 10%; }
