Update twitter to add mod % comparator, which is effectively an "every-Nth" operator Update twitter to add "test mode" where automatic and manual tweets are shown but not sent to twitter

--- a/html/controls/twitter.css
+++ b/html/controls/twitter.css
@@ -15,6 +15,7 @@
   p.LogInStatus.LoggedIn a.NotLoggedIn { display: none; }
 
   p.Error:not(.Show) { display: none; }
+  p.TestMode:not(.Show) { display: none; }
 /* End Main controls */
 
 /* User Tweets */
