Update mobile operator page to split team score subpage into 3 separate pages; the existing page for both teams (unchanged), and a page for each team, with only team name and score and adjustment buttons -/+1 through -/+5

--- a/html/controls/mobile.css
+++ b/html/controls/mobile.css
@@ -27,5 +27,7 @@
 /* END PeriodTimePage */
 
 /* TeamScorePage */
-  #TeamScorePage div { text-align: center; }
+  #TeamBothScorePage div { text-align: center; }
+  #Team1ScorePage div { text-align: center; }
+  #Team2ScorePage div { text-align: center; }
 /* END TeamScorePage */
