Move twitter page edit conditional tweet dialog into built-in div in page; this is partially so that autocomplete drop-down can be scrolled using side scroll bar, as the scrollbar is disabled when a dialog is popped up.  also the built-in div i think provides a better user interface than a dialog popup

--- a/html/controls/twitter.css
+++ b/html/controls/twitter.css
@@ -46,7 +46,9 @@
   #ConditionalTweets>tbody>tr:nth-child(even)>td { background: #ccc; }
 /* End ConditionalTweets table */
 
-/* ShowFormatSpecifiersDialog */
+/* ConditionalTweetConfiguration */
+  #ConditionalTweetConfiguration:not(.show) { display: none; }
+
   #HelpText table { width: 100%; }
   #HelpText table td { width: 50%; }
-/* End ShowFormatSpecifiersDialog */
+/* End ConditionalTweetConfiguration */
